<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.RegisterActivity">


    <ProgressBar
        android:id="@+id/reg_prog_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:fadingEdge="horizontal"
        android:foregroundTint="@color/colorPrimaryDark"
        android:foregroundTintMode="src_atop"
        android:indeterminate="true"
        android:indeterminateTint="@color/orange2"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/login_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="start"
        android:scaleType="fitXY"
        android:text="@string/sign_up_intro_1"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="start"
        android:text="@string/signup_intro_2"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@id/login_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_img"
        app:layout_constraintTop_toBottomOf="@id/login_img" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCard"
        style="@style/loginpageCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        android:theme="@style/loginpageCard"
        app:cardBackgroundColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email_layout"
                style="@style/textFieldTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="52dp"
                android:hint="@string/signup_email_label"
                android:textColorHint="@color/colorPrimaryDark"
                app:errorEnabled="true"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"

                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_pwd_layout"
                style="@style/textFieldTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/pwd_label"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_conf_pwd_layout"
                style="@style/textFieldTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/pwd_confirm_label"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_pwd_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_pwd_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/orange1"
                android:elevation="10dp"
                android:text="Sign up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/signup_conf_pwd_layout"
                app:layout_constraintTop_toBottomOf="@+id/signup_conf_pwd_layout" />

            <Button
                android:id="@+id/signup_sign_in_btn"
                style="?attr/materialButtonOutlinedStyle"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="56dp"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="5dp"
                android:gravity="center"
                android:text="Sign in"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signup_btn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/signup_btn"
                app:layout_constraintTop_toBottomOf="@+id/signup_btn"
                app:layout_constraintVertical_bias="0.1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/admin_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/intro2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_admin" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/admin_icon"
        app:layout_constraintRight_toRightOf="@id/admin_icon"
        app:layout_constraintLeft_toLeftOf="@id/admin_icon"
        android:textSize="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>