<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#F4F4F4"
    android:layout_height="match_parent"
    tools:context=".ui.CreateComplaint">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/complaint_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_create_complaint_details_fragment"
        app:titleTextColor="#FFFFFF" />

    <ProgressBar
        android:id="@+id/compl_prog_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal"
        android:foregroundTint="@color/colorPrimaryDark"
        android:foregroundTintMode="src_atop"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complaint_toolbar" />

    <TextView
        android:id="@+id/pick_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/compl_prog_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:text="pick an image"
        android:textColor="@color/black"
        android:textSize="10dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"

        />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compl_prog_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/create_complaint_images_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_complaint_title_layout"
                style="@style/productEditTextFieldTheme"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:hint="@string/complaint_title"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_complaint_images_recycler_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_complaint_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_complaint_description_layout"
                style="@style/productEditTextFieldTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                app:errorEnabled="true"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:gravity="top"
                android:hint="@string/describe_complaint"
                android:inputType="textMultiLine"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_complaint_description"
                    android:layout_width="match_parent"
                    android:layout_height="178dp"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/edit_submit_complaint"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorAccent"
                android:elevation="10dp"
                android:text="@string/edit_submit_complaint"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/edit_complaint_description_layout" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
